--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,6 +7,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
